--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #smart-button-container {
 	height: 90vh;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
